--- a/style/main.css
+++ b/style/main.css
@@ -1,7 +1,7 @@
-body{
+/* body{
     width: 1200px;
     margin-left: calc(50% - 600px);   
-}
+} */
 header{
     background-color: rgb(171, 171, 232);
 }
