--- a/style/base/base.css
+++ b/style/base/base.css
@@ -2,6 +2,12 @@
     --primary-color: #03a9f4;
     --secondary-color:#ea1d62;
 }
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 .bg-primary{
       background-color: var(--primary-color)
 }
