--- a/style/page/home.css
+++ b/style/page/home.css
@@ -1,19 +1,5 @@
-body {
-    background-color: #0d8bc5;
-}
+.hero{
+    min-height: 100vh;
+    /* max-height: 100vh; */
 
-#header {
-
-    background-image: url('../Image/coming-soon-mazas.png');
-    /* /* background-repeat: no-repeat; */
-    background-size: cover;
-
-}
-
-main {
-    background-color: #505153;
-}
-
-footer {
-    background-color: #f4a403;
 }
