--- a/style/base/layout.css
+++ b/style/base/layout.css
@@ -8,6 +8,9 @@ main {
     width: 100%;
 
 }
+h3{
+    text-transform: uppercase;
+}
 
 .container {
     float: left;
@@ -29,12 +32,15 @@ main {
     width: 600px;
     margin-left: calc(50% - 300px);
     background-color: pink;
-
+    flex-direction: column;
+    align-items: center;
 }
+
+
 
 .main-content {
     display: flex;
-    justify-content: ;
+    justify-content:space-between
 
 }
 
@@ -43,7 +49,7 @@ main {
     
 }
 
-.right-colum {
+.right-column {
     width: 40%;
 
 
