--- a/style/components/clock.css
+++ b/style/components/clock.css
@@ -1,6 +1,6 @@
-.timer{
+.timer {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    display: flex;
+    display: grid;
     font: 2em sans-serif;
     flex-direction: column;
     align-content: space-around;
@@ -8,5 +8,12 @@
     justify-content: space-evenly;
     color: white;
 }
-    
 
+.row-timer {
+    display: flex;
+    justify-content: space-between;
+    width: 600px;
+    margin-left: calc(50% - 300px);
+    background-color: rgb(98, 18, 31);
+
+}
