--- a/style/base/layout.css
+++ b/style/base/layout.css
@@ -20,14 +20,14 @@ h3 {
 }
 
 .row {
-    display: inline-block;
+    float: left;
     width: 1000px;
     margin-left: calc(50% - 500px);
     background-color: greenyellow;
 }
 
 .row-short {
-    display: flex;
+    float: left;
     width: 600px;
     margin-left: calc(50% - 300px);
     background-color: pink;
@@ -55,6 +55,45 @@ h3 {
     font-size: 20px;
    
     text-align: center;
+}
+@media (max-width: 1100px) {
+    .row {
+        width: 800px;
+        margin-left: calc(50% - 400px);
+    }
+}
 
+@media (max-width: 900px) {
+    .row {
+        width: 600px;
+        margin-left: calc(50% - 300px);
+    }
+    .main-content {
+        flex-direction: column;
+        gap: 60px;
+    }
+    .right-column,
+    .left-column {
+        width: 100%;
+    }
+}
 
+@media (max-width: 700px) {
+    .row,
+    .row-short {
+        width: 400px;
+        margin-left: calc(50% - 200px);
+    }
+}
+
+@media (max-width: 460px) {
+    .container {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .row,
+    .row-short {
+        width: 100%;
+        margin-left: 0;
+    }
 }
