--- a/style/base/layout.css
+++ b/style/base/layout.css
@@ -8,10 +8,6 @@ main {
     width: 100%;
 }
 
-h3 {
-    text-transform: uppercase;
-}
-
 .container {
     float: left;
     width: 100%;
@@ -83,6 +79,11 @@ h3 {
     .row-short {
         width: 400px;
         margin-left: calc(50% - 200px);
+    }
+    .row-timer{
+        width: 400px;
+        display: flex;
+        flex-direction: column;
     }
 }
 
