--- a/style/page/home.css
+++ b/style/page/home.css
@@ -15,6 +15,7 @@
 }
 .main-title {
     font-size: 60px;
+    
 }
 .main-description {
     font-size: 20px;
@@ -23,4 +24,28 @@
 .clock {
     margin-top: 30px;
     margin-bottom: 30px;
+}
+.left-column,
+.right-column{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.section-title{
+    text-transform: uppercase;
+    font-size: 20px;
+}
+.section-description{
+    font-size: 18px;
+    color: #555;
+}
+
+.section-description >a{
+    color: var(--secondary-color);
+    text-decoration: none;
+}
+.section-description >a:hover{
+    color: var(--secondary-color);
+    text-decoration: underline;
 }
