--- a/style/page/home.css
+++ b/style/page/home.css
@@ -49,4 +49,16 @@
     color: var(--secondary-color);
     text-decoration: underline;
 }
+footer.container{
+    padding-top: 0 ;
+    text-align: center;
+    color: #fffb;
+}
+footer a{
+    color: #fff;
+    text-decoration: none;
+}
+footer a:hover{
+    text-decoration: underline;
+}
 
