--- a/style/base/layout.css
+++ b/style/base/layout.css
@@ -1,4 +1,5 @@
 body {
+    width: 100%;
     display: inline-block;
     margin: 0;
 }
@@ -18,7 +19,8 @@ main {
 .row {
     float: left;
     width: 1000px;
-    margin-left: calc(50% - 500px);
+    margin-left: calc(50% - 500px); /* margin-left:0 calc(50% - 500px);*/
+    margin-right: calc(50% - 500px);
     background-color: greenyellow;
 }
 
