--- a/style/components/social.css
+++ b/style/components/social.css
@@ -1,18 +1,19 @@
 .socials{
     display:flex;
     justify-content: center;
-    gap: 24px;
+    gap: 10px;
     flex-wrap: wrap;
     padding-top: 10px;
     padding-bottom: 10px;
-    margin-bottom: 2px solid #fff;
+    margin-bottom: 10px;
+    border-bottom: 2px solid #fff;
 }
 .socials > .icon{
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     text-align: center;
-    font-size: 15px;
-    line-height: 60px;
+    font-size: 20px;
+    line-height: 50px;
     color: #fff;
     text-decoration: none;
     border-radius: 50%;
