--- a/style/base/layout.css
+++ b/style/base/layout.css
@@ -19,7 +19,8 @@ main {
 .row {
     float: left;
     width: 1000px;
-    margin-left: calc(50% - 500px); /* margin:0 calc(50% - 500px);*/
+    margin-left: calc(50% - 500px);
+    /* margin:0 calc(50% - 500px);*/
     margin-right: calc(50% - 500px);
 
 }
@@ -45,14 +46,16 @@ main {
 .right-column {
     width: 40%;
 }
-.social{
+
+.social {
     /* display: inline-block; */
     text-decoration: none;
     color: white;
     font-size: 20px;
-   
+
     text-align: center;
 }
+
 @media (max-width: 1100px) {
     .row {
         width: 800px;
@@ -65,10 +68,12 @@ main {
         width: 600px;
         margin-left: calc(50% - 300px);
     }
+
     .main-content {
         flex-direction: column;
         gap: 60px;
     }
+
     .right-column,
     .left-column {
         width: 100%;
@@ -76,12 +81,14 @@ main {
 }
 
 @media (max-width: 700px) {
+
     .row,
     .row-short {
         width: 400px;
         margin-left: calc(50% - 200px);
     }
-    .row-timer{
+
+    .row-timer {
         width: 400px;
         display: flex;
         flex-direction: column;
@@ -93,10 +100,11 @@ main {
         padding-left: 20px;
         padding-right: 20px;
     }
+
     .row,
     .row-short {
         width: 100%;
         margin: 0;
-        
+
     }
 }
