--- a/style/components/clock.css
+++ b/style/components/clock.css
@@ -16,5 +16,17 @@
     width: 600px;
     margin-left: calc(50% - 300px);
 
-
+    object-fit: contain;
+    color: white;
 }
+
+.timer {
+    display: flex;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    justify-content: space-between;
+    font: 2em sans-serif;
+    object-fit: contain;
+    flex-wrap: wrap;
+    color: white;
+}
+
