--- a/style/page/home.css
+++ b/style/page/home.css
@@ -1,6 +1,11 @@
 .hero {
     min-height: 100vh;
     text-align: center;
+    background-image: url(../../Image/coming-soon.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
 
 }
 
