Mouse and progres bar animation

--- a/style/components/progress-bar.css
+++ b/style/components/progress-bar.css
@@ -3,22 +3,46 @@
     flex-direction: column;
     gap: 10px;
 }
-.progress-bar > .top {
+
+.progress-bar>.top {
     display: flex;
     justify-content: space-between;
     color: #777;
     font-size: 18px;
 }
-.progress-bar > .bottom {
+
+.progress-bar>.bottom {
     height: 6px;
     border-radius: 3px;
     background-color: #ccc;
 }
-.progress-bar > .bottom > .progress {
+
+.progress-bar>.bottom>.progress {
     height: 100%;
     width: 100%;
-    background-color: var(--primary-color);
     border-radius: inherit;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
+}
+
+.progress-bar .progress > .bar {
+    background-color: var(--primary-color);
+    height: 100%;
+    width: 100%;
+    border-radius: inherit;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    animation: loading 1s forwards;
+}
+
+@keyframes loading {
+    0% {
+        width: 0;
+
+    }
+
+    100% {
+        width: 100%;
+
+    }
 }
