--- a/style/base/layout.css
+++ b/style/base/layout.css
@@ -14,14 +14,15 @@ main {
     width: 100%;
     padding-top: 60px;
     padding-bottom: 60px;
+    position: relative;
 }
 
 .row {
     float: left;
     width: 1000px;
     margin-left: calc(50% - 500px);
-    /* margin:0 calc(50% - 500px);*/
-    margin-right: calc(50% - 500px);
+    /* margin:0 calc(50% - 500px); */
+    margin-left: calc(50% - 500px);
 
 }
 
@@ -60,6 +61,7 @@ main {
     .row {
         width: 800px;
         margin-left: calc(50% - 400px);
+        margin-top: 20px;
     }
 }
 
