--- a/style/components/form.css
+++ b/style/components/form.css
@@ -1,11 +1,21 @@
 .form {
 
-    border-width: 0;
-    border-style: hidden;
-    border-color: brown;
-    float: right;
-    display: flow-root;
-    flex-direction: row;
-    align-items: end;
 
 }
+.form > *{
+        margin-bottom: 20px;
+}
+.form > *:last-child{
+        margin-bottom: 0;
+}
+.form > input{
+        width: calc(50% - 10px);
+}
+
+.form > input:last-of-type{
+        float:right;
+}
+.form > textarea{
+        width: 100%;
+}
+
